# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.469 2005/11/08 02:26:01 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  initial 'pretty' partition table display support
  clicking partition in 'pretty' display works instead of radio buttons
  radio buttons and pretty display work together
  META redirect instead of javascript
  pretty display stretches across entire screen
  'Recommended layout' and 'Clear drive' functions
  properly catch exceptions from do_recommended()

  6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  initial generic disk support
  fixes for add_partition() code
  src/net/server/handlers/WebGLIHandler.py:
  added support for creating generic disks
  add new partition working
  save and delete partitions

  6 Nov 2005; Preston Cody <codeman@gentoo.org>
  webgli: Partitioning making progress.

  5 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  copy_pkg_to_chroot() overhaul - does install the Right Way(TM) (copy files to
  image dir, run pkg_setup, pkg_preinst, copy to /, pkg_postinst, remove image
  dir) and works around /etc/gconf symlink problem

  5 Nov 2005; Preston Cody <codeman@gentoo.org>
  webgli: lots of updates.  preliminary partitioning.  extra packages works.
  
  3 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  httpd now supports HTTPS and falls back to HTTP if not available
  make fallback actually work
  src/net/server/SecureXMLRPCServer.py:
  SecureSocketServer is now threaded

  2 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/client/gliclient.py:
  try to use HTTPS for XMLRPC first and fallback to HTTP
  pretend mode
  src/net/server/gliserv.py, src/net/server/SecureXMLRPCServer.py:
  HTTPS XMLRPC goodness from samyron