@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.469 2005/11/08 02:26:01 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.470 2005/11/08 03:50:34 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -14,6 +14,8 @@
   pretty display stretches across entire screen
   'Recommended layout' and 'Clear drive' functions
   properly catch exceptions from do_recommended()
+  src/GLIArchitectureTemplate.py:
+  replace preinst, copy, postinst, rm steps with qmerge
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
